# mq-bench

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  ga-channel.xml  pub.csv  sub.csv  test_stats.csv
.github/: copilot-instructions.md
config/: mosquitto.conf  nats.conf  rabbitmq.conf  router1.json5
good/latency_vs_payload_20251130_061838/plots/: README.md
good/latency_vs_payload_20251130_061838/raw_data/: summary.csv
good/latency_vs_payload_20251130_223226/plots/: README.md
good/latency_vs_payload_20251130_223226/raw_data/: summary.csv
good/throughput_vs_pairs_20251205_025137/plots/: README.md
good/throughput_vs_pairs_20251205_025137/raw_data/: summary.csv
good/throughput_vs_pairs_20251209_022213/plots/: README.md
good/throughput_vs_pairs_20251209_022213/raw_data/: summary.csv
scripts/: collect_remote_docker_stats.sh  compose_up.sh  lib.sh  orchestrate_benchmarks.sh  orchestrate_latency_vs_payload.sh  orchestrate_throughput_vs_pairs.sh  plot_results.py  run_cluster_3r.sh  run_fanout.sh  run_multi_topic_fanout.sh  run_multi_topic_perkey.sh  run_queries.sh  test_crash_injection.sh  test_qos2_no_crash.sh  test_reliable_publisher.sh
setup/: README.md  install-docker.sh  kvm-create-delete.sh
src/: crash.rs  lib.rs  main.rs
src/metrics/: mod.rs  sequence.rs  stats.rs
src/roles/: mod.rs  multi_topic.rs  publisher.rs  queryable.rs  reliable_publisher.rs  requester.rs  subscriber.rs
src/transport/: amqp.rs  mock.rs  mod.rs  mqtt.rs  nats.rs  redis.rs  zenoh.rs
tests/: crash_injection_tests.rs
””/: README.md
