[package]
name = "mq-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hdrhistogram = "7.0"
csv = "1.4.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.100"
futures = "0.3"
flume = "=0.11.1"
bytes = "1"
thiserror = "2.0.17"
async-trait = "0.1"
uuid = { version = "1.19.0", features = ["v4"] }

[features]
default = ["transport-mock", "transport-zenoh", "transport-redis", "transport-mqtt", "transport-nats", "transport-amqp-0-9"]
transport-zenoh = ["dep:zenoh"]
transport-redis = ["dep:redis"]
transport-mock = []
transport-mqtt = ["dep:rumqttc"]
transport-nats = ["dep:async-nats"]
transport-amqp-0-9 = ["dep:lapin", 
# "dep:tokio-amqp"
]

[dependencies.zenoh]
version = "1.7.0"
optional = true
features = ["unstable"]
[dependencies.redis]
version = "1.0.0"
optional = true
features = ["tokio-comp", "connection-manager"]

[dependencies.rumqttc]
version = "0.25.1"
optional = true

[dependencies.async-nats]
version = "0.45.0"
optional = true

[dependencies.lapin]
version = "3.7.2"
optional = true

# [dependencies.tokio-amqp]
# version = "2.0"
# optional = true

[profile.release]
lto = true
codegen-units = 1